--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
   <body>
-    <h1>Welcome to my Git Sync Sidecar Homepage v2!</h1>
+    <h1>Welcome to my Git Sync Sidecar Homepage!</h1>
   </body>
 </html>
